# identity_socializer

./: .coveragerc  .env.remote  .env_template  .flake8  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  okteto.yml  pyproject.toml
.github/workflows/: pull_request.yml  tests.yml
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.okteto.yml  docker-compose.yml
deploy/kube/: app.yml  db.yml  mongo-express.yml  mongodb.yml  namespace.yml  pgadmin.yml  rabbit.yml
identity_socializer/: __init__.py  __main__.py  conftest.py  settings.py
identity_socializer/db/: base.py  utils.py
identity_socializer/db/collections/: chats.py  messages.py  notifications.py
identity_socializer/db/dao/: admin_dao.py  certified_request_dao.py  dummy_dao.py  logger_dao.py  push_token_dao.py  relationship_dao.py  user_dao.py
identity_socializer/db/migrations/: env.py
identity_socializer/db/migrations/versions/: 2021-08-16-16-55_2b7380507a71.py  2023-09-21-17-33_847eee4ea866.py  2023-10-15-23-56_6a777ccf275f.py  2023-10-19-14-45_22ac5d68869b.py  2023-11-02-15-33_6ab7a6b6f682.py  2023-11-15-10-38_56865ec352df.py  2023-11-23-00-52_10115e2a0ca3.py  2023-11-28-22-19_ed0c0284f370.py  2023-12-03-00-49_18ff9184e762.py  2023-12-03-00-59_e4141c4c1350.py  2023-12-06-01-14_d98bc4f14185.py
identity_socializer/db/models/: __init__.py  admin_model.py  certified_request_model.py  dummy_model.py  logger_model.py  push_token_model.py  relationship_model.py  user_model.py
identity_socializer/services/: __init__.py  push_notifications.py
identity_socializer/tests/: __init__.py  test_auth.py  test_dummy.py  test_pushtoken.py
identity_socializer/web/: __init__.py  application.py  lifetime.py
identity_socializer/web/api/: __init__.py  router.py  utils.py
identity_socializer/web/api/auth/: __init__.py  schema.py  views.py
identity_socializer/web/api/certified_request/: __init__.py  schema.py  views.py
identity_socializer/web/api/chat/: __init__.py  schema.py  views.py
identity_socializer/web/api/docs/: __init__.py
identity_socializer/web/api/dummy/: __init__.py  views.py
identity_socializer/web/api/echo/: __init__.py  views.py
identity_socializer/web/api/filter/: __init__.py  views.py
(+14 files in other folders)
